gccida/c3/ssa_const_prop
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_const_prop/src/ssa-ccp.c:1466:4: error: expected ';' after expression
rtx insn; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_const_prop/src/ssa-ccp.c:1466:5: error: use of undeclared identifier 'insn'
rtx insn; // rdi 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_const_prop/src/ssa-ccp.c:1487:4: error: expected ';' after expression
rtx v39; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_const_prop/src/ssa-ccp.c:1487:5: error: use of undeclared identifier 'v39'
rtx v39; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_const_prop/src/ssa-ccp.c:1498:4: error: expected ';' after expression
rtx v50; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_const_prop/src/ssa-ccp.c:1498:5: error: use of undeclared identifier 'v50'
rtx v50; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_const_prop/src/ssa-ccp.c:1499:4: error: expected ';' after expression
rtx v51; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_const_prop/src/ssa-ccp.c:1499:5: error: use of undeclared identifier 'v51'
rtx v51; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_const_prop/src/ssa-ccp.c:1546:1: error: use of undeclared identifier 'edge_info_0'; did you mean 'edge_info'?
edge_info_0 = ( edge *)xmalloc( 8LL * edges->num_edges); 
^~~~~~~~~~~
edge_info
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_const_prop/src/ssa-ccp.c:106:14: note: 'edge_info' declared here
static edge *edge_info;
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_const_prop/src/ssa-ccp.c:1555:1: error: use of undeclared identifier 'edge_info_0'; did you mean 'edge_info'?
edge_info_0[edge_index] = succ->succ_next; 
^~~~~~~~~~~
edge_info
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_const_prop/src/ssa-ccp.c:106:14: note: 'edge_info' declared here
static edge *edge_info;
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_const_prop/src/ssa-ccp.c:1566:7: error: use of undeclared identifier 'edge_info_0'; did you mean 'edge_info'?
v11 = edge_info_0; 
      ^~~~~~~~~~~
      edge_info
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_const_prop/src/ssa-ccp.c:106:14: note: 'edge_info' declared here
static edge *edge_info;
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_const_prop/src/ssa-ccp.c:1579:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v14 = ( __int64)rtx[2]; 
                ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_const_prop/src/ssa-ccp.c:1635:7: error: use of undeclared identifier 'edge_info_0'; did you mean 'edge_info'?
v34 = edge_info_0; 
      ^~~~~~~~~~~
      edge_info
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_const_prop/src/ssa-ccp.c:106:14: note: 'edge_info' declared here
static edge *edge_info;
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_const_prop/src/ssa-ccp.c:1653:1: error: use of undeclared identifier 'insn'
insn = uses->ref->insn; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_const_prop/src/ssa-ccp.c:1655:15: error: use of undeclared identifier 'insn'
&& *( _WORD *)insn == 32 
              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_const_prop/src/ssa-ccp.c:1654:6: error: use of undeclared identifier 'insn'
if ( insn 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_const_prop/src/ssa-ccp.c:1656:22: error: use of undeclared identifier 'insn'
&& ( v19 = ( __int64)insn[2], *( _WORD *)v19 == 47) 
                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_const_prop/src/ssa-ccp.c:1659:37: error: use of undeclared identifier 'insn'
v20 = basic_block_for_insn->data.bb[insn->fld[0].rtint]; 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_const_prop/src/ssa-ccp.c:1662:17: error: use of undeclared identifier 'insn'
visit_phi_node( insn, v20); 
                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_const_prop/src/obj/ssa-ccp.o] Error 1
